Added Video Summarizer project

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <div class="nav-menu">
                         <nav class="nav-links">
                             <a class="nav-link" href="#about">About</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                             <a class="nav-link" href="#skills">Skills</a>
                             <a class="nav-link" href="#experience">Experience</a>
-                            <a class="nav-link" href="#projects">Projects</a>
                             <a class="nav-link" href="#education">Education</a>
                             <a class="nav-link" href="#achievements">Achievements</a>
                             <a class="nav-link" href="#contact">Contact</a>
@@ -244,6 +244,108 @@
                 </div>
             </section>
 
+            <section class="section-padding projects-section" id="projects">
+                <div class="container">
+                    <div
+                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2.5rem;">
+                        <h2 class="section-title" style="margin-bottom: 0;">Featured Projects</h2>
+                        <!-- <a class="desktop-only" href="projects.html"
+                            style="display: flex; align-items: center; color: var(--primary); font-weight: 700; font-size: 0.875rem;">
+                            View All Work <span class="material-symbols-outlined"
+                                style="font-size: 1rem; margin-left: 0.25rem;">arrow_forward</span>
+                        </a> -->
+                    </div>
+                    <div class="projects-grid">
+                        <div class="project-card">
+                            <div class="project-image">
+                                <div
+                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
+                                </div>
+                                <img alt="Computer screen displaying code and graphs" class="project-img-src"
+                                    data-alt="Code on a screen showing data visualization charts"
+                                    src="img/VideoSummarizer.jpg" />
+                            </div>
+                            <div class="project-content">
+                                <div class="project-tags">
+                                    <span class="project-tag">LLM Inference</span>
+                                    <span class="project-tag">vLLM</span>
+                                    <span class="project-tag">Python</span>
+                                </div>
+                                <h3 class="project-title">Production-Grade Video Summarization and Q&A Platform using
+                                    Whisper, and Distributed Workers</h3>
+                                <p class="project-desc">
+                                    Scalable asynchronous pipeline for video summarization and Q&A using Whisper,
+                                    FastAPI, and Redis.
+                                </p>
+                                <div class="project-links">
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/video-summarizer"
+                                        target="_blank">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <div class="project-image">
+                                <div
+                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
+                                </div>
+                                <img alt="Computer screen displaying code and graphs" class="project-img-src"
+                                    data-alt="Code on a screen showing data visualization charts"
+                                    src="img/llminferenceengine.png" />
+                            </div>
+                            <div class="project-content">
+                                <div class="project-tags">
+                                    <span class="project-tag">LLM Inference</span>
+                                    <span class="project-tag">vLLM</span>
+                                    <span class="project-tag">Python</span>
+                                </div>
+                                <h3 class="project-title">High-Performance LLM Inference Engine with Grammar-Constrained
+                                    Decoding</h3>
+                                <p class="project-desc">
+                                    Built a local LLM inference engine implementing and enabling deterministic and
+                                    grammar-constrained text generation through token masking and incremental parsing.
+                                </p>
+                                <div class="project-links">
+                                    <a class="project-link"
+                                        href="https://github.com/Shashank-mankala1/High-Performance-LLM-Inference-Engine-with-Grammar-Constrained-Decoding"
+                                        target="_blank">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <div class="project-image">
+                                <div
+                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
+                                </div>
+                                <img alt="Dashboard with financial data charts" class="project-img-src"
+                                    data-alt="Modern dashboard showing financial graphs and predictive lines"
+                                    src="img/tutormind.png" />
+                            </div>
+                            <div class="project-content">
+                                <div class="project-tags">
+                                    <span class="project-tag">LLMs</span>
+                                    <span class="project-tag">RAG</span>
+                                    <span class="project-tag">LangChain</span>
+                                </div>
+                                <h3 class="project-title">TutorMind - Personalized AI</h3>
+                                <p class="project-desc">
+                                    AI-powered assistant that answers context-specific questions using
+                                    user-uploaded documents, LLMs, and vector-based retrieval.
+                                </p>
+                                <div class="project-links">
+                                    <a class="project-link" href="https://tutormindai.streamlit.app/">Live</a>
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/tutormind"
+                                        target="_blank">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="desktop-only" href="projects.html"
+                            style="display: flex; align-items: center; color: var(--primary); font-weight: 700; font-size: 0.875rem;">
+                            View All Projects <span class="material-symbols-outlined"
+                                style="font-size: 1rem; margin-left: 0.25rem;">arrow_forward</span>
+                        </a>
+                    </div>
+                </div>
+            </section>
 
             <section class="skills-section" id="skills">
                 <div class="container">
@@ -427,7 +529,7 @@
                             <div class="timeline-dot active"></div>
 
                             <div class="timeline-header">
-                                <h3 class="timeline-role">Data Scientist Intern</h3>
+                                <h3 class="timeline-role">Data Scientist | Supply Chain | Demand Forecasting</h3>
                                 <span class="timeline-year">Sep 2025 - Dec 2025</span>
                             </div>
 
@@ -467,7 +569,7 @@
                             <div class="timeline-dot"></div>
 
                             <div class="timeline-header">
-                                <h3 class="timeline-role">Lead Data Analyst</h3>
+                                <h3 class="timeline-role">Lead Data Analyst | Supply Chain | Last Mile</h3>
                                 <span class="timeline-year">Dec 2023 - Jul 2024</span>
                             </div>
 
@@ -500,7 +602,7 @@
                             <div class="timeline-dot"></div>
 
                             <div class="timeline-header">
-                                <h3 class="timeline-role">Software Engineer Intern</h3>
+                                <h3 class="timeline-role">Software Engineer Intern | FinTech | EdTech</h3>
                                 <span class="timeline-year">Jun 2022 - Jun 2023</span>
                             </div>
 
@@ -536,110 +638,6 @@
                 </div>
             </section>
 
-            <section class="section-padding projects-section" id="projects">
-                <div class="container">
-                    <div
-                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2.5rem;">
-                        <h2 class="section-title" style="margin-bottom: 0;">Featured Projects</h2>
-                        <!-- <a class="desktop-only" href="projects.html"
-                            style="display: flex; align-items: center; color: var(--primary); font-weight: 700; font-size: 0.875rem;">
-                            View All Work <span class="material-symbols-outlined"
-                                style="font-size: 1rem; margin-left: 0.25rem;">arrow_forward</span>
-                        </a> -->
-                    </div>
-                    <div class="projects-grid">
-                        <div class="project-card">
-                            <div class="project-image">
-                                <div
-                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
-                                </div>
-                                <img alt="Computer screen displaying code and graphs" class="project-img-src"
-                                    data-alt="Code on a screen showing data visualization charts"
-                                    src="img/llminferenceengine.png" />
-                            </div>
-                            <div class="project-content">
-                                <div class="project-tags">
-                                    <span class="project-tag">LLM Inference</span>
-                                    <span class="project-tag">vLLM</span>
-                                    <span class="project-tag">Python</span>
-                                </div>
-                                <h3 class="project-title">High-Performance LLM Inference Engine with Grammar-Constrained
-                                    Decoding</h3>
-                                <p class="project-desc">
-                                    Built a local LLM inference engine implementing and enabling deterministic and
-                                    grammar-constrained text generation through token masking and incremental parsing.
-                                </p>
-                                <div class="project-links">
-                                    <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/High-Performance-LLM-Inference-Engine-with-Grammar-Constrained-Decoding">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <div class="project-image">
-                                <div
-                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
-                                </div>
-                                <img alt="Dashboard with financial data charts" class="project-img-src"
-                                    data-alt="Modern dashboard showing financial graphs and predictive lines"
-                                    src="img/tutormind.png" />
-                            </div>
-                            <div class="project-content">
-                                <div class="project-tags">
-                                    <span class="project-tag">LLMs</span>
-                                    <span class="project-tag">RAG</span>
-                                    <span class="project-tag">LangChain</span>
-                                </div>
-                                <h3 class="project-title">TutorMind - Personalized AI</h3>
-                                <p class="project-desc">
-                                    AI-powered assistant that answers context-specific questions using
-                                    user-uploaded documents, LLMs, and vector-based retrieval.
-                                </p>
-                                <div class="project-links">
-                                    <a class="project-link" href="https://tutormindai.streamlit.app/">Live</a>
-                                    <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/tutormind">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <div class="project-image">
-                                <div
-                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
-                                </div>
-                                <img alt="Factory automation arm" class="project-img-src"
-                                    data-alt="Industrial robotic arm in a manufacturing setting"
-                                    src="img/cryptodashboard.png" />
-                            </div>
-                            <div class="project-content">
-                                <div class="project-tags">
-                                    <span class="project-tag">Machine Learning</span>
-                                    <span class="project-tag">Docker</span>
-                                    <span class="project-tag">Streamlit</span>
-                                    <span class="project-tag">Python</span>
-                                </div>
-                                <h3 class="project-title">Real-Time Crypto Trading Dashboard</h3>
-                                <p class="project-desc">
-                                    Designed and deployed a real-time, Docker-based crypto trading dashboard with live
-                                    data ingestion, ML-driven predictions, and a Streamlit visualization interface.
-                                </p>
-                                <div class="project-links">
-                                    <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/realtimecryptotradingdashboard">GitHub</a>
-                                    <a class="project-link"
-                                        href="https://medium.com/@shashankmankala/building-a-real-time-crypto-trading-pipeline-with-docker-and-python-8b49cd526269">Medium</a>
-                                </div>
-                            </div>
-                        </div>
-                        <a class="desktop-only" href="projects.html"
-                            style="display: flex; align-items: center; color: var(--primary); font-weight: 700; font-size: 0.875rem;">
-                            View All Projects <span class="material-symbols-outlined"
-                                style="font-size: 1rem; margin-left: 0.25rem;">arrow_forward</span>
-                        </a>
-                    </div>
-                </div>
-            </section>
-
             <section class="section-padding" id="education">
                 <div class="container">
                     <h2 class="section-title" style="text-align: center; margin-bottom: 2.5rem;">Education</h2>
@@ -657,7 +655,7 @@
                                 Buffalo (SUNY)</p>
                             <p style="font-size: 0.875rem; color: var(--text-slate-500);">
                                 Specialization in Machine Learning and Artificial Intelligence.
-                                Interned at New Era Cap as an Data Scienctist Intern
+                                Interned at New Era Cap as an Data Scientist.
                                 <br />GPA: 3.9/4.0
                             </p>
                         </div>
@@ -920,7 +918,7 @@
         <footer class="main-footer">
             <div class="container footer-content">
                 <div class="footer-text">
-                    © 2025 Shashank Mankala. All rights reserved.
+                    © 2025-2026 Shashank Mankala. All rights reserved.
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/Shashank-mankala1" target="_blank" class="social-icon">
