--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>All Projects | Shashank Data Scientist</title>
+    <meta name="title" content="Shashank Mankala | Data Scientist | ML & Generative AI Engineer">
+    <meta name="description" content="Projects | Shashank Data Scientist">
+    <meta name="keywords" content="Shashank Mankala, Data Scientist, ML & Generative AI Engineer, Projects">
+    <meta name="author" content="Shashank Mankala">
+    <meta name="robots" content="index, follow">
+
+    <link rel=" icon" type="image/png" href="img/mylogo.png">
+
+
+
     <link href="https://fonts.googleapis.com" rel="preconnect" />
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
     <link
@@ -126,6 +136,33 @@
                                 </div>
                                 <img alt="Computer screen displaying code and graphs" class="project-img-src"
                                     data-alt="Code on a screen showing data visualization charts"
+                                    src="img/VideoSummarizer.jpg" />
+                            </div>
+                            <div class="project-content">
+                                <div class="project-tags">
+                                    <span class="project-tag">Video Summarization</span>
+                                    <span class="project-tag">vLLM</span>
+                                    <span class="project-tag">Python</span>
+                                </div>
+                                <h3 class="project-title">Production-Grade Video Summarization and Q&A Platform using
+                                    Whisper, and Distributed Workers</h3>
+                                <p class="project-desc">
+                                    Scalable asynchronous pipeline for video summarization and Q&A using Whisper,
+                                    FastAPI, and Redis.
+                                </p>
+                                <div class="project-links">
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/video-summarizer"
+                                        target="_blank">GitHub</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-card">
+                            <div class="project-image">
+                                <div
+                                    style="position: absolute; inset: 0; background-color: var(--primary-opacity-20); z-index: 10;">
+                                </div>
+                                <img alt="Computer screen displaying code and graphs" class="project-img-src"
+                                    data-alt="Code on a screen showing data visualization charts"
                                     src="img/llminferenceengine.png" />
                             </div>
                             <div class="project-content">
@@ -142,7 +179,8 @@
                                 </p>
                                 <div class="project-links">
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/High-Performance-LLM-Inference-Engine-with-Grammar-Constrained-Decoding">GitHub</a>
+                                        href="https://github.com/Shashank-mankala1/High-Performance-LLM-Inference-Engine-with-Grammar-Constrained-Decoding"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -168,8 +206,8 @@
                                 </p>
                                 <div class="project-links">
                                     <a class="project-link" href="https://tutormindai.streamlit.app/">Live</a>
-                                    <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/tutormind">GitHub</a>
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/tutormind"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -196,9 +234,11 @@
                                 </p>
                                 <div class="project-links">
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/realtimecryptotradingdashboard">GitHub</a>
+                                        href="https://github.com/Shashank-mankala1/realtimecryptotradingdashboard"
+                                        target="_blank">GitHub</a>
                                     <a class="project-link"
-                                        href="https://medium.com/@shashankmankala/building-a-real-time-crypto-trading-pipeline-with-docker-and-python-8b49cd526269">Medium</a>
+                                        href="https://medium.com/@shashankmankala/building-a-real-time-crypto-trading-pipeline-with-docker-and-python-8b49cd526269"
+                                        target="_blank">Medium</a>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +266,8 @@
                                     <a class="project-link"
                                         href="https://python.plainenglish.io/building-a-diabetes-prediction-system-a-step-by-step-guide-a293e4b9a9fd?gi=5e49322834b6">Medium</a>
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/diabetes-prediction-project">GitHub</a>
+                                        href="https://github.com/Shashank-mankala1/diabetes-prediction-project"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -251,9 +292,11 @@
                                 </p>
                                 <div class="project-links">
                                     <a class="project-link"
-                                        href="https://shashank-mankala1.github.io/Heart-Attack-Prediction/">Live</a>
+                                        href="https://shashank-mankala1.github.io/Heart-Attack-Prediction/"
+                                        target="_blank">Live</a>
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/Heart-Attack-Prediction">GitHub</a>
+                                        href="https://github.com/Shashank-mankala1/Heart-Attack-Prediction"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -278,13 +321,16 @@
                                     integrated with backend services for real-time responses.
                                 </p>
                                 <div class="project-links">
-                                    <a class="project-link" href="https://shashank-mankala1.github.io/chatbot/">Live</a>
+                                    <a class="project-link" href="https://shashank-mankala1.github.io/chatbot/"
+                                        target="_blank">Live</a>
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/chatbot"
+                                        target="_blank">GitHub</a>
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/chatbot">GitHub</a>
+                                        href="https://drive.google.com/file/d/1GeRRJuizv08VJ1toyAkvEPiw79ZzVRvZ/view?usp=sharing"
+                                        target="_blank">Demo</a>
                                     <a class="project-link"
-                                        href="https://drive.google.com/file/d/1GeRRJuizv08VJ1toyAkvEPiw79ZzVRvZ/view?usp=sharing">Demo</a>
-                                    <a class="project-link"
-                                        href="https://python.plainenglish.io/building-a-chatbot-dialogflow-fastapi-and-github-in-action-33f663578f79">Medium</a>
+                                        href="https://python.plainenglish.io/building-a-chatbot-dialogflow-fastapi-and-github-in-action-33f663578f79"
+                                        target="_blank">Medium</a>
                                 </div>
                             </div>
                         </div>
@@ -310,9 +356,11 @@
                                 </p>
                                 <div class="project-links">
                                     <a class="project-link"
-                                        href="https://public.tableau.com/app/profile/shashank.mankala/viz/RoadAccidents_16858089535950/Dashboard1?publish=yes">Live</a>
+                                        href="https://public.tableau.com/app/profile/shashank.mankala/viz/RoadAccidents_16858089535950/Dashboard1?publish=yes"
+                                        target="_blank">Live</a>
                                     <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/Road-Accidents-Dashboard">GitHub</a>
+                                        href="https://github.com/Shashank-mankala1/Road-Accidents-Dashboard"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -336,7 +384,8 @@
                                     communicate instantly through shareable links.
                                 </p>
                                 <div class="project-links">
-                                    <a class="project-link" href="http://easychat.lovestoblog.com/">Live</a>
+                                    <a class="project-link" href="http://easychat.lovestoblog.com/"
+                                        target="_blank">Live</a>
                                 </div>
                             </div>
                         </div>
@@ -359,10 +408,10 @@
                                     a clean, responsive, and user-friendly design.
                                 </p>
                                 <div class="project-links">
-                                    <a class="project-link"
-                                        href="https://shashank-mankala1.github.io/portfolio/">Live</a>
-                                    <a class="project-link"
-                                        href="https://github.com/Shashank-mankala1/portfolio">GitHub</a>
+                                    <a class="project-link" href="https://shashank-mankala1.github.io/portfolio/"
+                                        target="_blank">Live</a>
+                                    <a class="project-link" href="https://github.com/Shashank-mankala1/portfolio"
+                                        target="_blank">GitHub</a>
                                 </div>
                             </div>
                         </div>
@@ -396,7 +445,7 @@
         <footer class="main-footer">
             <div class="container footer-content">
                 <div class="footer-text">
-                    © 2025 Shashank Mankala. All rights reserved.
+                    © 2025-2026 Shashank Mankala. All rights reserved.
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/Shashank-mankala1" target="_blank" class="social-icon">
