--- a/projects.html
+++ b/projects.html
@@ -32,28 +32,36 @@
             <div class="container">
                 <div class="header-content">
                     <div class="logo-area">
-                        <a href="index.html" class="logo-area" style="color: inherit; text-decoration: none;">
+                        <a href="index.html">
                             <div class="logo-icon">
-                                <span class="material-symbols-outlined" style="font-size: 20px;">dataset</span>
+                                <!-- <span class="material-symbols-outlined" style="font-size: 20px;">dataset</span> -->
+                                <img src="img/mylogo.png" alt="Logo" style="border-radius: 0.75rem;">
                             </div>
+                        </a>
+                        <a href="index.html">
                             <h1 class="logo-text">Shashank | AI &amp; Data Science</h1>
                         </a>
                     </div>
                     <div class="nav-menu">
                         <nav class="nav-links">
                             <a class="nav-link" href="index.html#about">About</a>
+                            <a class="nav-link active" href="index.html#projects">Projects</a>
                             <a class="nav-link" href="index.html#skills">Skills</a>
                             <a class="nav-link" href="index.html#experience">Experience</a>
-                            <a class="nav-link active" href="projects.html">Projects</a>
                             <a class="nav-link" href="index.html#education">Education</a>
                             <a class="nav-link" href="index.html#achievements">Achievements</a>
                             <a class="nav-link" href="index.html#contact">Contact</a>
                         </nav>
-                        <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf">
+                        <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf" style="margin-left: 1rem;">
                             <button class="btn-primary desktop-only">
                                 Download Resume
                             </button>
                         </a>
+                        <button class="theme-toggle-btn" aria-label="Toggle Dark Mode">
+                            <span class="material-symbols-outlined theme-icon-light">light_mode</span>
+                            <span class="material-symbols-outlined theme-icon-dark"
+                                style="display:none;">dark_mode</span>
+                        </button>
                     </div>
                     <button class="mobile-menu-btn">
                         <span class="material-symbols-outlined">menu</span>
