--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" lang="en">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -57,6 +57,14 @@
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7YVFRYX6GS"></script>
     <script>
+        // Check for saved theme preference or system preference
+        const savedTheme = localStorage.getItem('theme');
+        const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+
+        if (savedTheme === 'dark' || (!savedTheme && systemTheme === 'dark')) {
+            document.documentElement.setAttribute('data-theme', 'dark');
+        }
+
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -70,10 +78,15 @@
             <div class="container">
                 <div class="header-content">
                     <div class="logo-area">
-                        <div class="logo-icon">
-                            <span class="material-symbols-outlined" style="font-size: 20px;">dataset</span>
-                        </div>
-                        <h1 class="logo-text">Shashank | AI &amp; Data Science</h1>
+                        <a href="index.html">
+                            <div class="logo-icon">
+                                <!-- <span class="material-symbols-outlined" style="font-size: 20px;">dataset</span> -->
+                                <img src="img/mylogo.png" alt="Logo" style="border-radius: 0.75rem;">
+                            </div>
+                        </a>
+                        <a href="index.html">
+                            <h1 class="logo-text">Shashank | AI &amp; Data Science</h1>
+                        </a>
                     </div>
                     <div class="nav-menu">
                         <nav class="nav-links">
@@ -85,11 +98,16 @@
                             <a class="nav-link" href="#achievements">Achievements</a>
                             <a class="nav-link" href="#contact">Contact</a>
                         </nav>
-                        <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf">
+                        <a href="Resume.pdf" download="Shashank_Mankala_Resume.pdf" style="margin-left: 1rem;">
                             <button class="btn-primary desktop-only">
                                 Download Resume
                             </button>
                         </a>
+                        <!-- <button class="theme-toggle-btn" aria-label="Toggle Dark Mode">
+                            <span class="material-symbols-outlined theme-icon-light">light_mode</span>
+                            <span class="material-symbols-outlined theme-icon-dark"
+                                style="display:none;">dark_mode</span>
+                        </button> -->
                     </div>
                     <button class="mobile-menu-btn">
                         <span class="material-symbols-outlined">menu</span>
@@ -182,8 +200,8 @@
                             </h2>
 
                             <div
-                                style="font-size: 1rem; color: var(--text-gray-400); line-height: 1.6; display: flex; flex-direction: column; gap: 0.5rem;">
-                                <p>
+                                style="font-size: 1rem; color: var(--text-gray-400); line-height: 1.6; display: flex; flex-direction: column;">
+                                <p style="margin-bottom: 0rem;">
                                     I am a Data Scientist and Machine Learning Engineer with 3+ years of experience
                                     building
                                     end-to-end data and AI systems that move beyond experimentation into production.
@@ -192,7 +210,7 @@
                                     learning, with a strong focus on delivering measurable business outcomes.
                                 </p>
 
-                                <p>
+                                <p style="margin-bottom: 0rem;">
                                     I have designed and deployed forecasting, analytics, and automation pipelines using
                                     <strong>Snowflake</strong>, <strong>Azure</strong>, and cloud-native tooling,
                                     driving up to
@@ -203,7 +221,7 @@
                                     engineering, and stakeholders to turn complex problems into reliable systems.
                                 </p>
 
-                                <p>
+                                <p style="margin-bottom: 0rem;">
                                     Currently, I specialize in <strong>Generative AI</strong>, <strong>LLMs</strong>,
                                     and
                                     <strong>MLOps</strong>, building high-performance inference engines, RAG-based
@@ -214,7 +232,7 @@
                                     more.
                                 </p>
 
-                                <p>
+                                <p style="margin-bottom: 0rem;">
                                     Outside of work, I contribute to open-source projects, experiment with new AI
                                     architectures,
                                     and write about applied machine learning, system design, and responsible AI
@@ -347,7 +365,7 @@
                 </div>
             </section>
 
-            <section class="skills-section" id="skills">
+            <section class="section-padding skills-section" id="skills">
                 <div class="container">
                     <div style="margin-bottom: 3rem;">
                         <h2 class="section-title" style="margin-bottom: 1rem;">Technical Proficiency</h2>
@@ -516,7 +534,7 @@
                 </div>
             </section>
 
-            <section class="section-padding" id="experience">
+            <section class="section-padding experience-section" id="experience">
                 <div class="container" style="max-width: 1000px;">
                     <div style="text-align: center; margin-bottom: 4rem;">
                         <h2 class="section-title" style="margin-bottom: 1rem;">Professional Experience</h2>
@@ -679,9 +697,7 @@
                 </div>
             </section>
 
-            <section class="section-padding" id="achievements" style="    padding: 4rem 0;
-    border-top: 1px solid var(--white-opacity-10);
-    background-color: rgba(26, 35, 50, 0.2)">
+            <section class="section-padding achievements-section" id="achievements">
                 <div class="container" style="max-width: 1000px;">
                     <h2 class="section-title" style="text-align: center; margin-bottom: 2.5rem;">Achievements &amp;
                         Certifications</h2>
@@ -964,7 +980,76 @@
             </div>
         </footer>
     </div>
+    <!-- Chatbot Widget -->
+    <div class="chatbot-wrapper">
+        <div class="chatbot-window" id="chatbot-window">
+            <div class="chatbot-header">
+                <div class="chatbot-title">
+                    <div class="status-dot-online"></div>
+                    <span>Virtual Assistant</span>
+                </div>
+                <button class="chatbot-close" id="chatbot-close">
+                    <span class="material-symbols-outlined">close</span>
+                </button>
+            </div>
+
+            <div class="chatbot-messages" id="chatbot-messages">
+                <div class="message bot-message">
+                    Hello! I'm Shashank's virtual assistant. I can help you navigate his portfolio. What would you like
+                    to know?
+                </div>
+                <!-- Chips will be injected here or statically placed -->
+                <div class="chat-chips-container">
+                    <button class="chat-chip" data-action="skills">What are his skills?</button>
+                    <button class="chat-chip" data-action="projects">Show me latest projects</button>
+                    <button class="chat-chip" data-action="experience">Experience highlights</button>
+                    <button class="chat-chip" data-action="contact">How to contact him?</button>
+                </div>
+            </div>
+
+            <div class="chatbot-input-area">
+                <input type="text" id="chatbot-input" placeholder="Ask a question..." autocomplete="off">
+                <button id="chatbot-send">
+                    <span class="material-symbols-outlined">send</span>
+                </button>
+            </div>
+        </div>
+
+        <button class="chatbot-toggle" id="chatbot-toggle">
+            <span class="material-symbols-outlined">smart_toy</span>
+            <span class="chatbot-toggle-text">Chat</span>
+        </button>
+    </div>
+
     <script src="js/index.js"></script>
+    <script>
+        const toggleBtn = document.querySelector('.theme-toggle-btn');
+        const lightIcon = document.querySelector('.theme-icon-light');
+        const darkIcon = document.querySelector('.theme-icon-dark');
+
+        function updateIcons(theme) {
+            if (theme === 'dark') {
+                lightIcon.style.display = 'none';
+                darkIcon.style.display = 'block';
+            } else {
+                lightIcon.style.display = 'block';
+                darkIcon.style.display = 'none';
+            }
+        }
+
+        // Initialize icons based on current theme
+        const currentTheme = document.documentElement.getAttribute('data-theme') || 'light';
+        updateIcons(currentTheme);
+
+        toggleBtn.addEventListener('click', () => {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+
+            document.documentElement.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+            updateIcons(newTheme);
+        });
+    </script>
 </body>
 
 </html>
